Register and Login Forms 2

--- a/Register and Login Forms/index.html
+++ b/Register and Login Forms/index.html
@@ -21,11 +21,84 @@
             <input type="text" placeholder="Email ID">
           </div>
           <div class="input-field">
-            <i class="fas fa-user"></i>
+            <i class="fas fa-lock"></i>
             <input type="password" placeholder="Password">
           </div>
           <input type="submit" value="Login" class="btn solid">
         </form>
+
+        <form action="" class="register-form">
+          <h2 class="title">I am a</h2>
+          <input type="submit" value="Patient" class="btn solid">
+          <input type="submit" value="Doctor" class="btn solid">
+        </form>
+
+        <form action="" class="register-form">
+          <h2 class="title">Registration for Patients</h2>
+          <div class="input-field">
+            <i class="fa fa-user"></i>
+            <input type="text" placeholder="First Name">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-user"></i>
+            <input type="text" placeholder="Last Name">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-calendar"></i>
+            <input type="text" placeholder="Date of Birth">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-envelope"></i>
+            <input type="text" placeholder="Email ID">
+          </div>
+          <div class="input-field">
+            <i class="fas fa-lock"></i>
+            <input type="password" placeholder="Password">
+          </div>
+          <input type="submit" value="Register" class="btn solid">
+        </form>
+
+        <form action="" class="register-form">
+          <h2 class="title">Registration for Doctors</h2>
+          <div class="input-field">
+            <i class="fa fa-user"></i>
+            <input type="text" placeholder="First Name">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-user"></i>
+            <input type="text" placeholder="Last Name">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-calendar"></i>
+            <input type="text" placeholder="Date of Birth">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-envelope"></i>
+            <input type="text" placeholder="Email ID">
+          </div>
+          <div class="input-field">
+            <i class="fas fa-lock"></i>
+            <input type="password" placeholder="Password">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-registered"></i>
+            <input type="number" placeholder="BMDC Registration No">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-pen"></i>
+            <input type="text" placeholder="Education Level">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-mobile"></i>
+            <input type="tel" placeholder="Contact No">
+          </div>
+          <div class="input-field">
+            <i class="fa fa-dollar-sign"></i>
+            <input type="number" max="1000" placeholder="Charge per session">
+          </div>
+          <input type="submit" value="Register" class="btn solid">
+        </form>
+
       </div>
     </div>
     <div class="panels-container"></div>
