--- a/Login & Reg Options/index.html
+++ b/Login & Reg Options/index.html
@@ -5,16 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-  </script>
-  <title>Register and Login Forms</title>
+  <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
+  <title>Register or Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="container">
     <div class="forms-container">
-      <div class="signin-signup">
-        <form action="" class="sign-in-form">
+      <div class="login-reg">
+
+
+        <form action="" class="login-form">
           <h2 class="title">Login</h2>
           <div class="input-field">
             <i class="fa fa-user"></i>
@@ -27,11 +29,13 @@
           <input type="submit" value="Login" class="btn solid">
         </form>
 
+
         <form action="" class="register-form">
           <h2 class="title">I am a</h2>
           <input type="submit" value="Patient" class="btn solid">
           <input type="submit" value="Doctor" class="btn solid">
         </form>
+
 
         <form action="" class="register-form">
           <h2 class="title">Registration for Patients</h2>
@@ -57,6 +61,7 @@
           </div>
           <input type="submit" value="Register" class="btn solid">
         </form>
+
 
         <form action="" class="register-form">
           <h2 class="title">Registration for Doctors</h2>
@@ -101,8 +106,30 @@
 
       </div>
     </div>
-    <div class="panels-container"></div>
+
+    <div class="panels-container">
+      <div class="panel left-panel">
+        <div class="content">
+          <h3>New here?</h3>
+          <p>lorem ipsum</p>
+          <button class="btn transparent" id="registration-btn">Register</button>
+        </div>
+        <img src="img/register.svg" class="image" alt="">
+      </div>
+
+      <div class="panel right-panel">
+        <div class="content">
+          <h3>Registered?</h3>
+          <p>lorem ipsum</p>
+          <button class="btn transparent" id="login-btn">Login</button>
+        </div>
+        <img src="img/login.svg" class="image" alt="">
+      </div>
+    </div>
+
   </div>
+
+  <script src="app.js"></script>
 </body>
 
 </html>
