--- a/Login & Reg Options/login.html
+++ b/Login & Reg Options/login.html
@@ -45,20 +45,12 @@
         <div class="content">
           <h3>New here?</h3>
           <p>Register with us!</p>
-          <button class="btn transparent" id="registration-btn">Register</button>
+          <a href="choosereg.html">
+            <button class="btn transparent" id="registration-btn">Register</button>
+          </a>
         </div>
         <img src="img/register.svg" class="image" alt="">
       </div>
-
-      <div class="panel right-panel">
-        <div class="content">
-          <h3>Already registered?</h3>
-          <p>Please login first!</p>
-          <button class="btn transparent" id="login-btn">Login</button>
-        </div>
-        <img src="img/login.svg" class="image" alt="">
-      </div>
-    </div>
 
   </div>
 
