--- a/Registration Form for Doctors/docreg.html
+++ b/Registration Form for Doctors/docreg.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
-  <title>Registration</title>
+  <title>Registration for Doctors</title>
   <link rel="stylesheet" href="docregstyle.css">
 </head>
 
@@ -56,9 +56,14 @@
           </div>
           <input type="submit" value="Register" class="btn solid">
         </form>
-
       </div>
     </div>
+
+    <div class="panels-container">
+      <div class="panel left-panel">
+        <img src="img/docreg.svg" class="image" alt="">
+      </div>
+
   </div>
 </body>
 </html>
