Set Up Homepage

--- a/Registration Form for Doctors/docreg.html
+++ b/Registration Form for Doctors/docreg.html
@@ -28,7 +28,8 @@
           </div>
           <div class="input-field">
             <i class="fa fa-calendar"></i>
-            <input type="text" placeholder="Date of Birth" required>
+            <input type="text" placeholder="Date of Birth (dd-mm-yyyy)" value=""
+            min="1930-01-01" required>
           </div>
           <div class="input-field">
             <i class="fa fa-envelope"></i>
@@ -63,6 +64,7 @@
       <div class="panel left-panel">
         <img src="img/docreg.svg" class="image" alt="">
       </div>
+    </div>
 
   </div>
 </body>
