--- a/Registration Form for Patient/patreg.html
+++ b/Registration Form for Patient/patreg.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
-  <title>Registration</title>
+  <title>Registration for Patients</title>
   <link rel="stylesheet" href="patregstyle.css">
 </head>
 
@@ -27,7 +27,8 @@
           </div>
           <div class="input-field">
             <i class="fa fa-calendar"></i>
-            <input type="text" placeholder="Date of Birth" required>
+            <input type="text" placeholder="Date of Birth (dd-mm-yyyy)" value=""
+            min="1930-01-01" required>
           </div>
           <div class="input-field">
             <i class="fa fa-envelope"></i>
@@ -39,8 +40,12 @@
           </div>
           <input type="submit" value="Register" class="btn solid">
         </form>
+      </div>
+    </div>
 
-
+    <div class="panels-container">
+      <div class="panel left-panel">
+        <img src="img/patreg.svg" class="image" alt="">
       </div>
     </div>
   </div>
