--- a/Homepage/home.html
+++ b/Homepage/home.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+  <header>
+    <img class="logo" src="img/helloDoctor.png" alt="logo">
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Appointment</a></li>
+        <li><a href="#">Nearby Pharmacies</a></li>
+        <li><a href="#">Log Out</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <div class="container">
     <div class="btn-container">
       <h2 class='title'>Healthcare at your doorstep</h2>
