Set up Log out page

--- a/Log Out/logout.html
+++ b/Log Out/logout.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
-  <title>Home</title>
-  <link rel="stylesheet" href="homestyle.css">
+  <title>Log Out</title>
+  <link rel="stylesheet" href="logoutstyle.css">
 </head>
 
 <body>
@@ -25,11 +25,12 @@
 
   <div class="container">
     <div class="btn-container">
-      <h2 class='title'>Healthcare at your doorstep</h2>
-      <h3 class='h2-title'>Anytime, Anywhere</h3>
-      <form method="POST" action="">
-      <input type="submit" value="Create Appointment Now" class="btn solid">
-      </form>
+      <h2 class='title'>Are you sure?</h2>
+      <input type="submit" value="No" class="btn1 solid">
+      <input type="submit" value="Yes" class="btn2 solid">
     </div>
   </div>
 </body>
+
+
+
