--- a/Files/logout.html
+++ b/Files/logout.html
@@ -17,7 +17,8 @@
       <ul class="nav-links">
         <li><a href="home.html">Home</a></li>
         <li><a href="#">Appointment</a></li>
-        <li><a href="#">Nearby Pharmacies</a></li>
+        <li><a href="nearbypharma.html">Nearby Pharmacies</a></li>
+        <li><a href="https://video-app-4933-9049-dev.twil.io">Join My Appointment</a></li>
         <li><a href="logout.html">Log Out</a></li>
       </ul>
     </nav>
