Added General Homepage

--- a/Files/login.html
+++ b/Files/login.html
@@ -54,7 +54,7 @@
   function goHome(e){
     console.log(e);
     e.preventDefault();
-    window.open("/home.html", "_self")
+    window.open("/loggedinhome.html", "_self")
   }
 </script>
 
