--- a/Files/logout.html
+++ b/Files/logout.html
@@ -15,7 +15,7 @@
     <img class="logo" src="img/helloDoctor.png" alt="logo">
     <nav>
       <ul class="nav-links">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="loggedinhome.html">Home</a></li>
         <li><a href="#">Appointment</a></li>
         <li><a href="nearbypharma.html">Nearby Pharmacies</a></li>
         <li><a href="https://video-app-4933-9049-dev.twil.io">Join My Appointment</a></li>
@@ -26,22 +26,22 @@
 
   <div class="container">
     <div class="btn-container">
-      <h2 class='title'>Are you sure?</h2>
-      <input type="submit" value="No" onclick="goHome(event)" class="btn1 solid">
-      <input type="submit" value="Yes" onclick="goLogin(event)" class="btn2 solid">
+      <h2 class='title'>Are you sure you want to log out?</h2>
+      <input type="submit" value="No" onclick="goLoggedInHome(event)" class="btn1 solid">
+      <input type="submit" value="Yes" onclick="goLoggedOutHome(event)" class="btn2 solid">
     </div>
   </div>
 
   <script>
-    function goLogin(e){
+    function goLoggedOutHome(e){
       console.log(e);
       e.preventDefault();
-      window.open("/login.html", "_self")
+      window.open("/loggedouthome.html", "_self")
     }
-    function goHome(e){
+    function goLoggedInHome(e){
       console.log(e);
       e.preventDefault();
-      window.open("/home.html", "_self")
+      window.open("/loggedinhome.html", "_self")
     }
   </script>
 
