Added Prescription Form

--- a/Files/choosereg.html
+++ b/Files/choosereg.html
@@ -15,7 +15,7 @@
     <div class="forms-container">
       <div class="login-reg">
         <form action="" class="register-form">
-          <h2 class="title">I am a</h2>
+          <h2 class="title">Register as a</h2>
           <input type="submit" value="Patient" onclick="goPatient(event)" class="btn solid">
           <input type="submit" value="Doctor" onclick="goDoctor(event)" class="btn solid">
         </form>
