--- a/Files/login.html
+++ b/Files/login.html
@@ -19,8 +19,8 @@
         <form action="" class="login-form">
           <h2 class="title">Login</h2>
           <div class="input-field">
-            <i class="fa fa-user"></i>
-            <input type="text" placeholder="Email ID">
+            <i class="fa fa-mobile"></i>
+            <input type="number" placeholder="Contact No (01XXXXXXXXX)">
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
