--- a/Files/patreg.html
+++ b/Files/patreg.html
@@ -31,8 +31,8 @@
             min="1930-01-01" required>
           </div>
           <div class="input-field">
-            <i class="fa fa-envelope"></i>
-            <input type="text" placeholder="Email ID" required>
+            <i class="fa fa-mobile"></i>
+            <input type="number" placeholder="Contact No (01XXXXXXXXX)" required>
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
