--- a/Files/docreg.html
+++ b/Files/docreg.html
@@ -32,8 +32,8 @@
             min="1930-01-01" required>
           </div>
           <div class="input-field">
-            <i class="fa fa-envelope"></i>
-            <input type="text" placeholder="Email ID" required>
+            <i class="fa fa-mobile"></i>
+            <input type="number" placeholder="Contact No (01XXXXXXXXX)" required>
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
@@ -46,10 +46,6 @@
           <div class="input-field">
             <i class="fa fa-pen"></i>
             <input type="text" placeholder="Education Level" required>
-          </div>
-          <div class="input-field">
-            <i class="fa fa-mobile"></i>
-            <input type="tel" placeholder="Contact No" required>
           </div>
           <div class="input-field">
             <i class="fa fa-dollar-sign"></i>
