--- a/Files/loggedouthome.html
+++ b/Files/loggedouthome.html
@@ -15,6 +15,7 @@
     <img class="logo" src="img/helloDoctor.png" alt="logo">
     <nav>
       <ul class="nav-links">
+        <li><a href="aboutus.html">About Us</a></li>
         <li><a href="loggedouthome.html">Home</a></li>
         <li><a href="nearbypharma.html">Nearby Pharmacies</a></li>
         <li><a href="choosereg.html">Register</a></li>
