--- a/Files/nearbypharma.html
+++ b/Files/nearbypharma.html
@@ -41,8 +41,10 @@
       <img class="logo" src="img/helloDoctor.png" alt="logo">
       <nav>
         <ul class="nav-links">
+          <li><a href="aboutus.html">About Us</a></li>
           <li><a href="loggedinhome.html">Home</a></li>
           <li><a href="#">Appointment</a></li>
+          <li><a href="prescription.html">Prescription</a></li>
           <li><a href="nearbypharma.html">Nearby Pharmacies</a></li>
           <li><a href="https://video-app-4933-9049-dev.twil.io">Join My Appointment</a></li>
           <li><a href="logout.html">Log Out</a></li>
