--- a/Files/aboutus.html
+++ b/Files/aboutus.html
@@ -6,22 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
-  <title>Home</title>
-  <link rel="stylesheet" href="homestyle.css">
+  <title>About Us</title>
+  <link rel="stylesheet" href="aboutus.css">
 </head>
 
 <body>
   <header>
     <img class="logo" src="img/helloDoctor.png" alt="logo">
-    <nav>
-      <ul class="nav-links">
-        <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="loggedouthome.html">Home</a></li>
-        <li><a href="nearbypharma.html">Nearby Pharmacies</a></li>
-        <li><a href="choosereg.html">Register</a></li>
-        <li><a href="login.html">Login</a></li>
-      </ul>
-    </nav>
   </header>
+  <div class="container">
+    <div class="text">
+      <h2 class="h21">About Us</h2>
+      <p class="p1">helloDoctor is a web-based telecommunication system<br>that aims to connect patients with doctors anytime, anywhere<br>with the help of telecommunication devices and network connectivity.<br>You can create an appointment at your preferred time with your preferred doctor<br>Join your appointment by using our video chatting tool and get your diagnosis easily!</p>
+      <div class="contactInfo">
+          <div class="box">
+              <div class="text">
+                <h2 class="h22">Created by</h2>
+                <p class="p2">Ahnaf Akif<br>Faria Kanak<br>Md. Nazmul Hasan<br></p>
+              </div>
+          </div>
+          <div class="box">
+              <div class="text">
+                <h2 class="h23">Contact us</h2>
+                <p class="p3">md.ahnaf@northsouth.edu<br>faria.kanak@northsouth.edu<br>nazmul.hasan04@northsouth.edu<br></p>
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
