Made Some Changes

--- a/Files/choosereg.html
+++ b/Files/choosereg.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
-  <title>Register or Login</title>
+  <title>Register</title>
   <link rel="stylesheet" href="chooseregstyle.css">
 </head>
 
@@ -28,7 +28,6 @@
           <p>Please login first!</p>
           <button class="btn transparent" id="login-btn" onclick="goLogin()">Login</button>
         </div>
-        <img src="img/login.svg" class="image" alt="">
       </div>
     </div>
   </div>
