--- a/Files/loggedinhome.html
+++ b/Files/loggedinhome.html
@@ -19,7 +19,6 @@
         <li><a href="loggedinhome.html">Home</a></li>
         <li><a href="#">Appointment</a></li>
         <li><a href="prescription.html">Prescription</a></li>
-        <li><a href="nearbypharma.html">Nearby Pharmacies</a></li>
         <li><a href="https://video-app-4933-9049-dev.twil.io">Join My Appointment</a></li>
         <li><a href="/logout.html">Log Out</a></li>
       </ul>
@@ -28,8 +27,8 @@
 
   <div class="container">
     <div class="btn-container">
-      <h2 class='title'>Healthcare at your doorstep</h2>
-      <h3 class='h2-title'>Anytime, Anywhere</h3>
+      <h2 class='title'>We are bringing healthcare<br>to your doorstep</h2>
+      <h3 class='h2-title'>Register & Login to create an appointment<br>Find your preferred doctor and get your diagnosis via Video Chat<br>Download your prescription and start your treatment right away!</h3>
       <form method="POST" action="">
       <input type="submit" value="Create Appointment Now" class="btn solid">
       </form>
