--- a/Files/loggedouthome.html
+++ b/Files/loggedouthome.html
@@ -17,23 +17,24 @@
       <ul class="nav-links">
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="loggedouthome.html">Home</a></li>
-        <li><a href="nearbypharma.html">Nearby Pharmacies</a></li>
         <li><a href="choosereg.html">Register</a></li>
         <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
   </header>
-<!-----
+
   <div class="container">
     <div class="btn-container">
-      <h2 class='title'>Healthcare at your doorstep</h2>
-      <h3 class='h2-title'>Anytime, Anywhere</h3>
+      <h2 class='title'>We are bringing healthcare<br>to your doorstep</h2>
+      <h3 class='h2-title'>Register & Login to create an appointment<br>Find your preferred doctor and get your diagnosis via Video Chat<br>Download your prescription and start your treatment right away!</h3>
+      <h3 class='h3-title'></h3>
       <form method="POST" action="">
       <input type="submit" value="Create Appointment Now" class="btn solid">
       </form>
     </div>
   </div>
---->
+
+<!-----
   <div class="slider">
     <div class="slides">
       <input type="radio" name="radio-btn" id="radio1">
@@ -92,5 +93,6 @@
     }
   }, 5000);
   </script>
+  --->
 </body>
 </html>
