--- a/Files/prescription.html
+++ b/Files/prescription.html
@@ -18,7 +18,6 @@
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="loggedinhome.html">Home</a></li>
         <li><a href="#">Appointment</a></li>
-        <li><a href="prescription.html">Prescription</a></li>
         <li><a href="nearbypharma.html">Nearby Pharmacies</a></li>
         <li><a href="https://video-app-4933-9049-dev.twil.io">Join My Appointment</a></li>
         <li><a href="/logout.html">Log Out</a></li>
@@ -37,6 +36,10 @@
               <input type="number" id="Contact No of the Patient" required>
               <label for="Contact No of the Patient"><i class="fa fa-mobile"></i> Contact No of the Patient (01XXXXXXXXX)</label>
             </div>
+          </div>
+          <div class="input-field">
+            <input type="number" id="Appointment ID" required>
+            <label for="Appointment ID"> <i class="fa fa-id-card"></i> Appointment ID</label>
           </div>
           <div class="row">
             <div class="input-field">
