--- a/Files/login.html
+++ b/Files/login.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
-  <title>Register or Login</title>
+  <title>Login</title>
   <link rel="stylesheet" href="loginstyle.css">
 </head>
 
@@ -41,7 +41,6 @@
             <button class="btn transparent" id="registration-btn" onclick="goReg()">Register</button>
           </a>
         </div>
-        <img src="img/register.svg" class="image" alt="">
       </div>
 
   </div>
