Established Payment Gateway

--- a/Files/loggedinhome.html
+++ b/Files/loggedinhome.html
@@ -17,7 +17,9 @@
       <ul class="nav-links">
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="loggedinhome.html">Home</a></li>
+        <li><a href="#">Doctors</a></li>
         <li><a href="#">Appointment</a></li>
+        <li><a href="https://sandbox.sslcommerz.com/EasyCheckOut/testcde5bc45e3694bdd136a5cc5dc85c42310e" target="_blank">Make Payment</a></li>
         <li><a href="prescription.html">Prescription</a></li>
         <li><a href="https://video-app-4933-9049-dev.twil.io">Join My Appointment</a></li>
         <li><a href="/logout.html">Log Out</a></li>
