--- a/Files/docreg.html
+++ b/Files/docreg.html
@@ -47,6 +47,12 @@
             <i class="fa fa-pen"></i>
             <input type="text" placeholder="Education Level" required>
           </div>
+          <select id="option" class="input-field" required name="Specialization"></select>
+            <option value="0" disabled selected hidden>Select your specialization</option>
+          <!--<div class="input-field">
+            <i class="fa fa-stethoscope"></i>
+            <input type="text" placeholder="Specialization" required>
+          </div>-->
           <div class="input-field">
             <i class="fa fa-dollar-sign"></i>
             <input type="number" min= 0 max="1000" placeholder="Charge per session" required>
