--- a/Files/loggedinhome.html
+++ b/Files/loggedinhome.html
@@ -17,11 +17,11 @@
       <ul class="nav-links">
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="loggedinhome.html">Home</a></li>
-        <li><a href="#">Doctors</a></li>
-        <li><a href="#">Appointment</a></li>
+        <li><a href="#">Make an Appointment</a></li>
+        <li><a href="#">View Appointments</a></li>
         <!--<li><a href="https://sandbox.sslcommerz.com/EasyCheckOut/testcde5bc45e3694bdd136a5cc5dc85c42310e" target="_blank">Make Payment</a></li>-->
         <li><a href="prescription.html">Prescription</a></li>
-        <li><a href="https://video-app-4933-9049-dev.twil.io">Join My Appointment</a></li>
+        <li><a href="https://video-app-4933-9049-dev.twil.io" target="_blank">Join Appointment</a></li>
         <li><a href="/logout.html">Log Out</a></li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@
       <h2 class='title'>We are bringing healthcare<br>to your doorstep</h2>
       <h3 class='h2-title'>Register & Login to create an appointment<br>Find your preferred doctor and get your diagnosis via Video Chat<br>Download your prescription and start your treatment right away!</h3>
       <form method="POST" action="">
-      <input type="submit" value="Create Appointment Now" class="btn solid">
+      <input type="submit" value="View the registered doctors" class="btn solid">
       </form>
     </div>
   </div>
